# samtools

./: .appveyor.yml  .cirrus.yml  .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  CUDA_IMPLEMENTATION.md  ChangeLog  ChangeLog.old  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.generic  Makefile.lite  Makefile.mingw  Makefile.std  NEWS  NEWS.md  README  README.md  README_CUDA.md  RELEASE_SUMMARY_v1.0.0.md  amplicon_stats.c  autogen.sh  bam.c  bam.h  bam2bcf.c  bam2bcf.h  bam2bcf_indel.c  bam2depth.c  bam2tsv.c  bam2tsv.h  bam_addrprg.c  bam_ampliconclip.c  bam_ampliconclip.h  bam_aux.c  (+139 more)
.ci_helpers/: clone
.github/: code_refactor.prompt.md  copilot-instructions.md  gpu.prompt.md
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md  config.yml
.github/workflows/: c-cpp.yml  linux-build.yml  macos-build.yml  windows-build.yml
.travis/: clone
bcftools/: Makefile  README  bcf-fix.pl  bcf.c  bcf.h  bcf.tex  bcf2qcall.c  bcftools.1  bcfutils.c  call1.c  em.c  fet.c  index.c  kfunc.c  kmin.c  kmin.h  ld.c  main.c  mut.c  prob1.c  prob1.h  r2plot.lua  trio.c  vcf.c  vcfout.c  vcfutils.lua  vcfutils.pl
cuda/: cuda_config.cu  cuda_config.h  cuda_pileup.cu  cuda_pileup.cuh  cuda_sort.cu  cuda_sort.cuh  cuda_stats.cu  cuda_stats.cuh
doc/: samtools-addreplacerg.1  samtools-ampliconclip.1  samtools-ampliconstats.1  samtools-bedcov.1  samtools-calmd.1  samtools-cat.1  samtools-checksum.1  samtools-collate.1  samtools-consensus.1  samtools-coverage.1  samtools-cram-size.1  samtools-cram_size.1  samtools-depad.1  samtools-depth.1  samtools-dict.1  samtools-faidx.1  samtools-fasta.1  samtools-fastq.1  samtools-fixmate.1  samtools-flags.1  samtools-flagstat.1  samtools-fqidx.1  samtools-head.1  samtools-idxstats.1  samtools-import.1  samtools-index.1  samtools-markdup.1  samtools-merge.1  samtools-mpileup.1  samtools-phase.1  samtools-quickcheck.1  samtools-reference.1  samtools-reheader.1  samtools-reset.1  samtools-rmdup.1  samtools-samples.1  samtools-sort.1  samtools-split.1  samtools-stats.1  samtools-targetcut.1  (+4 more)
examples/: .gitignore  00README.txt  Makefile  bam2bed.c  calDepth.c  chk_indel.c  downsample.c  ex1.fa.fai  ex1.sam  gpu_example.sh  removeB.pl  toy-B.sam  toy.fa  toy.sam
lz4/: lz4.c
m4/: ax_with_curses.m4  ax_with_htslib.m4  hts_prog_cc_warnings.m4  hts_with_curses.m4
math/: Makefile  samtools.tex
misc/: HmmGlocal.java  Makefile  Makefile.am  Makefile.generic  ace2sam.c  bamcheck.c  blast2sam.pl  bowtie2sam.pl  export2sam.pl  fasta-sanitize.pl  filterexample1.c  filterexample2.c  generate_completion_file.sh  indel_filter.pl  interpolate_sam.pl  maq2sam.c  md5.c  md5.h  md5fa.c  md5sum-lite.c  novo2sam.pl  plot-ampliconstats  plot-bamcheck  plot-bamstats  psl2sam.pl  r2plot.lua  sam2vcf.pl  samtools.pl  samtools_tab_completion  samtools_tab_completion.bash  samtools_tab_completion.fish  seq_cache_populate.pl  seq_cache_populate.py  seqtk.c  soap2sam.pl  varfilter.py  vcfutils.lua  wgsim.1  wgsim.c  wgsim_eval.pl  (+1 more)
test/: .gitignore  regression.sh  test.c  test.h  test.pl  test_cuda.sh  test_cuda_config.c  vcf-miniview.c
test/addrprg/: 1_fixup.sam  1_fixup.sam.expected  2_fixup_orphan.sam  2_fixup_orphan.sam.expected  3_fixup.sam.expected.err  4_fixup_norg.sam  4_fixup_norg.sam.expected  5_editrg.sam.expected
test/ampliconclip/: 1_delete_tag.expected.sam  1_fail.expected.sam  1_filter.expected.sam  1_hard_clipped.expected.sam  1_original_tag.expected.sam  1_soft_clipped.expected.sam.new  1_soft_clipped_primer_counts.expected.tsv  1_soft_clipped_strand.expected.sam  1_soft_clipped_strand_primer_counts.expected.tsv  1_test_data.sam  2_both_clipped.expected.sam  2_both_test_data.sam  3_multi_ref_both_clip.expected.sam  3_multi_ref_clip.expected.sam  3_multi_ref_data.sam  3_multi_ref_data_primer_counts.expected.tsv  4_total_hc_data.expected.sam  4_total_hc_data.sam  ac_test.bed  ac_test2.bed  multi_ref.bed
test/ampliconstats/: mixed_clipped.sam  stats.expected.txt  stats_mixed.expected.txt  stats_partial.expected.txt
test/bam2fq/: 1.2.fq.expected  10.1.fq.expected  10.2.fq.expected  11.fa.expected  11.fq.expected  12.1.fq.expected  12.2.fq.expected  12.i.fq.expected  12.s.fq.expected  13.fq.expected  14.0.fq.expected  14.i1.fq.expected  14.i2.fq.expected  15.fq.expected  16.fq.expected  17.fq.expected  18.fq.expected  19.fq.expected  20.fq.expected  21.fq.expected  22.fq.expected  23.fq.expected  24.fq.expected  3.1.fq.expected  3.s.fq.expected  4.1.fq.expected  4.2.fq.expected  5.1.fq.expected  5.2.fq.expected  5.s.fq.expected  6.1.fq.expected  6.2.fq.expected  6.s.fq.expected  7.1.fq.expected  7.2.fq.expected  7.s.fq.expected  8.1.fq.expected  8.2.fq.expected  8.i.fq.expected  9.1.fq.expected  (+4 more)
test/bats/: corrupted_and_truncated_bams.bats  corrupted_bams.bats  ok_bams.bats  truncated_bams.bats
test/bedcov/: bedcov.bam  bedcov.bam.bai  bedcov.bed  bedcov.expected  bedcov_c.expected  bedcov_gG.bed  bedcov_gG.expected  bedcov_j.expected
test/checksum/: chk1.1.expected  chk1.3.expected  chk1.4.expected  chk1.5.expected  chk1.6.expected  chk1.7.expected  chk1.8.expected  chk1.bam  chk2.1.expected  chk2.2.expected  chk2.3.expected  chk2.4.expected  chk2.cram
test/collate/: 1_fast_collate.sam.expected  2_fast_collate_with_tmp_used.sam.expected  collate.expected.sam  fast_collate.sam
test/consensus/: .gitignore  consen1.sam  consen1b.sam  consen1c.fa  consen1c.fa.fai  consen1c.sam  consen2.sam  consen3.sam  consen4.bed  consen4.sam  consensus.reg  regression.sh
test/coverage/: 1.expected  2.expected  3.expected  4.expected  5.expected
test/cram_size/: cram_size.reg  mpileup.1.cram
test/dat/: .gitignore  bam2fq.001.sam  bam2fq.002.sam  bam2fq.003.sam  bam2fq.004.sam  bam2fq.005.sam  bam2fq.010.sam  bam2fq.013.sam  bam2fq.014.sam  bam2fq.703.sam  bam2fq.MD-D  bam2fq.sc.sam  cat.hdr  depad.001.fa  depad.001.fa.fai  depad.001p.sam  depad.001u.sam  dict.alias.fa  dict.alias.out  dict.alt  dict.alt.out  dict.fa  dict.out  (+58 more)
zlib/: Makefile  gzio.c  inffast.c  inffast.h  inflate.c  inflate.h  zlib.h
(+599 files in other folders)
